fix: fixed ui overflow not hidden

--- a/svn-app/src/assets/components/styles/TaskObject.css
+++ b/svn-app/src/assets/components/styles/TaskObject.css
@@ -9,6 +9,7 @@
     padding: 15px;
     gap: 5px;
     width: calc(100% - 30px);
+    overflow: hidden;
 }
 
 .task-status-container{
